Removed keyframes for spinning animation, replaced with gsap trying to fix issue on Safari

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -170,30 +170,6 @@ ul {
   font-display: swap;
 }
 
-/* Keyframes */
-@-webkit-keyframes rotating /* Safari and Chrome */ {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@keyframes rotating {
-  from {
-    -ms-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-.rotating {
-  -webkit-animation: rotating 2s linear infinite;
-  animation: rotating 2s linear infinite;
-}
-
 /* Buttons */
 
 .cta-button {
